syntax = "proto3";

                 package apiKey;
service ApiKeyService {
 rpc createApiKey (ApiKeyCreateInput) returns (ApiKey) {}
rpc apiKeys (findManyParams) returns (stream ApiKey) {}
rpc apiKey (ApiKeyWhereUniqueInput) returns (ApiKey) {}
rpc updateApiKey (ApiKeyUpdateInput) returns (ApiKey) {}
rpc deleteApiKey (ApiKeyWhereUniqueInput) returns (ApiKey) {} 
 }
message ApiKeyCreateInput {
string apiKey = 1;
string id = 2;
};
message ApiKey {
string apiKey = 1;
string id = 2;
};
message ApiKeyWhereUniqueInput {
string apiKey = 1;
string id = 2;
};
message ApiKeyUpdateInput {
string apiKey = 1;
string id = 2;
};
message findManyParams {

};